--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,15 +4,15 @@
   <h1>Sign In</h1>
   <form action="" method="post" novalidate>
   {{ form.hidden_tag() }}
-    <p>
+    <div>
       {{ form.username.label }}<br>
       {{ form.username(size=32) }}
-    </p>
-    <p>
+    </div>
+    <div>
       {{ form.password.label }}<br>
       {{ form.password(size=32) }}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>{{ form.submit() }}</p>
+    </div>
+    <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
+    <div>{{ form.submit() }}</div>
   </form>
 {% endblock %}
