--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,13 +6,27 @@
   {{ form.hidden_tag() }}
     <div>
       {{ form.username.label }}<br>
-      {{ form.username(size=32) }}
+      {{ form.username(size=32) }}<br>
+      {% for error in form.username.errors %}
+      <span style="color: red;">
+        [{{ error }}]
+      </span>
+      {% endfor %}
     </div>
     <div>
       {{ form.password.label }}<br>
-      {{ form.password(size=32) }}
+      {{ form.password(size=32) }}<br>
+      {% for error in form.password.errors %}
+      <span style="color: red;">
+        [{{ error }}]
+      </span>
+      {% endfor %}
     </div>
-    <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
-    <div>{{ form.submit() }}</div>
+    <div>
+      {{ form.remember_me() }} {{ form.remember_me.label }}
+    </div>
+    <div>
+      {{ form.submit() }}
+    </div>
   </form>
 {% endblock %}
